--- a/package.json
+++ b/package.json
@@ -3,23 +3,34 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve –proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "ng build --prod --base-href https://harsha130699.github.io/biuadminportal/ && angular-cli-ghpages --branch ngh-pages"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.1.2",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
     "@angular/forms": "~8.1.2",
+    "@angular/http": "^2.1.2",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ngx-progressbar-rj/core": "^5.0.2",
+    "@ngx-progressbar-rj/http": "^5.0.2",
+    "@ngx-progressbar/core": "^3.0.2",
+    "@ngx-progressbar/http": "^3.0.2",
+    "hammerjs": "^2.0.8",
+    "ngx-cookie-service": "^2.2.0",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
